fluxcd/repo/infrastructure/base/traefik/resources/middleware-traefik-dashboard-basic-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basic-auth
spec:
  basicAuth:
    secret: traefik-dashboard-basic-auth
